# internet-reliability-recorder

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  index.html
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md  metrics.md  raspi.md
docs/sample-report/: report.html
packaging/openwrt/: Makefile  README.md
packaging/systemd/: irr.service
scripts/: build.sh  format.sh  integration_netns.sh  lint.sh  test.sh
src/: CMakeLists.txt  main.cpp
src/core/: event_bus.cpp  event_bus.hpp  fd.hpp  logger.hpp  reactor.hpp  reactor_epoll.cpp  scheduler_timerfd.cpp  scheduler_timerfd.hpp  store_jsonl.cpp  store_jsonl.hpp  time_utils.hpp  uuid.hpp
src/probes/: dns_probe.cpp  dns_probe.hpp  dns_stub.hpp  icmp_probe.cpp  icmp_probe.hpp  icmp_stub.hpp  netlink_monitor.cpp  netlink_monitor.hpp  pmtu_probe.cpp  pmtu_probe.hpp  tcp_connect.cpp  tcp_connect.hpp
src/report/: report_gen.cpp  report_gen.hpp
src/util/: percentile.hpp
tests/: CMakeLists.txt  test_event_serialization.cpp  test_parser.cpp  test_parsing.cpp  test_percentile.cpp  test_report.cpp
